--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body {
     text-transform: uppercase;
 }
 /* 10 */
-.header__autorization__link {
+.header__autorization__link,
+.form__btn__item {
     text-decoration: none;
     padding: 12px 20px;
     background: #2f80ed;
@@ -36,9 +37,11 @@ body {
     transition: all .3s;
 }
 /* 20 */
-.header__autorization__link:hover {
+.header__autorization__link:hover,
+.form__btn__item:hover {
     background-color: #1366d6;
     box-shadow: rgba(0, 0, 0, .05) 0 5px 30px, rgba(0, 0, 0, .05) 0 1px 4px;
+    cursor: pointer;
 }
 /* 20 */
 .header__autorization__link:first-child {
@@ -50,4 +53,88 @@ body {
 }
 .content__search__heading {
     font-size: 2rem;
+    margin-bottom: 1%;
+}
+.form__content {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.form__content::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: url(../img/form-background.png) no-repeat center/contain;
+    opacity: .1;
+}
+.form__content__box {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+.form__label,
+.form__legend {
+    font-weight: 600;
+    display: block;
+    margin-bottom: 1%;
+    font-size: 1.2rem;
+}
+.form__legend {
+    margin-bottom: 2%;
+}
+.form__select {
+    width: 100%;
+}
+.form__select:hover,
+.form__input:hover {
+    background-color: #197ed1;
+}
+.form__input::placeholder {
+    color: #fff;
+}
+.form__select,
+.form__input {
+    background-color: #5d9fd4;
+    color: #fff;
+    border-radius: 5px;
+    border: #197ed1 2px solid;
+    padding: 1%;
+}
+.form__input {
+    padding-left: 8px;
+}
+.form__item {
+    margin-bottom: 2%;
+}
+.form__item__container{
+    padding-left: 3%;
+}
+.form__label--specify {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 1rem;
+    margin-right: 1%;
+}
+.form__item__box {
+    display: flex;
+    gap: 15px;
+}   
+.form__item__box .form__input,
+.form__item__box .form__select {
+    flex-grow: 1;
+}
+.form__btn {
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+}
+.form__btn__item {
+    border: none;
+    font-weight: 600;
+    padding: 12px 50px;
+    font-size: 1.1rem;
 }
